Show correct highlighting when navbar is collapsed

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -62,11 +62,13 @@ ul.nobullets {
 h1 {
   margin-top: 0;
 }
-nav {
-  li.active {
-    border-bottom: 3px solid #a8a8a8;
-    a {
-      background: transparent !important;
+@media (min-width: $grid-float-breakpoint) {
+  nav {
+    li.active {
+      border-bottom: 3px solid #a8a8a8;
+      a {
+        background: transparent !important;
+      }
     }
   }
 }
